# odbchat

./: .gitignore  AGENTS.md  Makefile  README.md  change_log.md  mcp_config.json  odbchat_cli.py  odbchat_mcp_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
api/: mhw_mcp.py
cli/: mhw_cli_patch.py  odbchat_cli.py  view_cli.py  viewer_client.py
dev/: check_qdrant.py  check_qdrant_omnipipe.py  check_qdrant_result.txt  extract_pdf.py  ingest_mhw.py  query_qdrant.py  query_qdrant_omnipipe.py  rag_cli.py
ingest/: README.md  ingest.py  ingest_json.py
odbchat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qdrant_data/: raft_state.json
rag_doc/: .yamllint.yaml
server/: keyword_sets.py  llm_adapter.py  odbchat_mcp_server.py  router_classifier.py  time_utils.py
sh/: chat_loop.sh  check_yml.py  download_models.py  extract_knowledge.sh  extract_knowledge_json.sh  gpu_reset.sh  install_model_env.sh  llama_health.sh  setup_env.py
shared/: schemas.py
specs/: mcp.tools.schema.json  odbchat_cli_mhw_plot_v0_3_7.md  odbchat_mcp_tools_metocean_integration_spec_v0_2.md  odbchat_mcp_tools_metocean_integration_spec_v0_3_7.md  odbchat_mcp_tools_router_spec_v0_1.md  odbchat_plot_odbViz_inetgration_code_suggestion_v0_1_0.md  odbchat_plot_odbViz_inetgration_patch_v0_1_0.md  odbchat_plot_requests_patch_spec_v0_1_0.md  odbchat_spec_v0_3.md  odbchat_spec_v0_3_7.md
tests/: conftest.py  test_citations.py  test_cli_onepass.py  test_cli_requests.py  test_ghrsst_mcp_proxy.py  test_ingest_dry_run.py  test_ingest_json.py  (+8 more)
(+75 files in other folders)
