[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odbchat"
version = "0.1.2"
description = "ODB chat with FastMCP + Ollama"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastmcp>=0.9.0",
    "ollama>=0.3.0",
    "mcp",
    "jsonschema>=4.22",
    "requests",
    "httpx",
    "websockets",
    "PyYAML",
    "qdrant-client",
    "sentence-transformers",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=1.1.0",
]
viz = [
    "numpy",
    "pandas",
    "matplotlib",
]
map = [
    "cartopy",
    "basemap",
    "basemap-data",
]

[tool.hatch.build.targets.wheel]
packages = ["cli", "shared", "server", "ingest", "rag"]
